--- a/Blazer/Pages/Index.razor
+++ b/Blazer/Pages/Index.razor
@@ -5,5 +5,6 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+<SfButton IconCss="e-icons e-chevron-down-fill" Content="Show dropdown" IconPosition="IconPosition.Right"></SfButton>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
