--- a/Blazer/Shared/NavMenu.razor
+++ b/Blazer/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="teste">
+                <span class="oi oi-clock" aria-hidden="true" Name="IconName.Copy"></span> teste
+            </NavLink>
+        </div>
     </nav>
 </div>
 
